Tests run using ./gradlew clean test again