@@ -13,6 +13,7 @@ repositories {
 buildscript {
     ext.kotlin_version = '1.1.0'
     ext.dokka_version = '0.9.11'
+    ext.junitPlatformVersion = '1.0.0-M3'
 
     repositories {
         mavenCentral()
@@ -24,8 +25,9 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
+        classpath "org.junit.platform:junit-platform-gradle-plugin:${junitPlatformVersion}"
     }
 }
 
@@ -34,15 +36,14 @@ apply plugin: 'application'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'project-report'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
-test {
-    reports {
-        junitXml.enabled = false
-        html.enabled = true
-    }
-}
+ext.junitJupiterVersion  = '5.0.0-M3'
+ext.junitPlatformVersion = '1.0.0-M3'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -51,7 +52,7 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
     // Used to remove a lot of Java boilerplate.
-    compileOnly 'org.projectlombok:lombok:1.16.8'
+    compile 'org.projectlombok:lombok:1.16.8'
 
     // Used for the decompiler command line interface
     compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
@@ -65,8 +66,11 @@ dependencies {
     // Used for the Either monad
     compile 'io.atlassian.fugue:fugue:4.3.0'
 
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0-M3"
     testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junitJupiterVersion}"
+    testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: "${junitPlatformVersion}"
+    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${junitJupiterVersion}"
 }
 
 mainClassName = "kilobyte.decompiler.CommandLineDecompiler"
@@ -92,6 +96,40 @@ task simulatorJar(type: Jar) {
     with jar
 }
 
+test {
+    // show standard out and standard error of the test JVM(s) on the console
+    testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+    }
+
+    reports {
+        junitXml.enabled = false
+        html.enabled = true
+    }
+
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
+
+}
+
+
 task wrapper(type: Wrapper) {
+    description = 'Generates gradlew[.bat] scripts'
     gradleVersion = '3.4'
 }
